shifted abstract above hero videos

--- a/index.html
+++ b/index.html
@@ -164,38 +164,6 @@
 </section>
 
 
-
-
-<section class="hero is-light is-small">
-  <div class="hero-body">
-    <div class="container">
-      <div class="columns">
-
-        <div class="column">
-          <div class="content">
-            <video id="jax214_rgb" autoplay muted loop playsinline height="100%">
-              <source src="./static/videos/jax_214_rgb.webm"
-                      type="video/mp4">
-            </video>
-            <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/iQ1-orKvd_I?si=9ika5E2Id3ivay9Q&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>         -->
-          </div>
-        </div>
-  
-        <div class="column">
-          <div class="content">
-            <video id="jax214_semantic" autoplay muted loop playsinline height="100%">
-              <source src="./static/videos/jax_214_semantic.webm"
-                      type="video/mp4">
-            </video>
-            <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/-UcKHpQlntU?si=T7a_rdhMGgoMgLjn&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>        </div> -->
-        </div>
-
-      </div>
-    </div>
-  </div>
-</section>
-
-
 <section class="section">
   <div class="container is-max-desktop">
     <!-- Abstract. -->
@@ -225,9 +193,49 @@
       </div>
     </div>
     <!--/ Abstract. -->
+  </div>
+</section>
 
+<section class="hero is-light is-small">
+  <div class="hero-body">
+    <div class="container has-text-centered">
+      <div class="columns">
+
+        <div class="column">
+          <div class="content">
+            <video id="jax214_rgb" autoplay muted loop playsinline height="100%">
+              <source src="./static/videos/jax_214_rgb.webm"
+                      type="video/mp4">
+            </video>
+            <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/iQ1-orKvd_I?si=9ika5E2Id3ivay9Q&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>         -->
+          </div>
+        </div>
+  
+        <div class="column">
+          <div class="content">
+            <video id="jax214_semantic" autoplay muted loop playsinline height="100%">
+              <source src="./static/videos/jax_214_semantic.webm"
+                      type="video/mp4">
+            </video>
+            <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/-UcKHpQlntU?si=T7a_rdhMGgoMgLjn&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>        </div> -->
+        </div>
+
+      </div>
+    </div>
+
+    
+    <p>Color and Semantic Images are rendered in the same inference call using a shared three-dimensional structure.</p>
+
+  </div>
+</section>
+
+
+
+
+<section class="section">
+  <div class="container is-max-desktop">
     <!-- Paper video. -->
-    <div class="columns is-centered has-text-centered mt-5">
+    <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Overview</h2>
         <div class="publication-video">
@@ -244,7 +252,6 @@
         </div>
       </div>
     </div> 
-
   </div>
 </section>
 
