--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
             <span class="author-block">
               Christoph Bodensteiner,</span>
             <span class="author-block">
-              Michael Arens</span>
+              and Michael Arens</span>
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block">Fraunhofer IOSB</span>
+            <span class="author-block">Fraunhofer Institute of Optronics, System Technologies and Image Exploitation</span>
           </div>
 
           <div class="column has-text-centered">
@@ -255,18 +255,78 @@
   </div>
 </section>
 
+
+<section class="section">
+  <div class="container is-max-desktop has-text-justified">
+
+    <h2 class="title">Semantic Neural Radiance Fields for Multi-Date Satellite Data</h2>
+
+    </div>
+  </section>
+
+
 <section class="section">
   <div class="container is-max-desktop has-text-justified">
 
     <h2 class="title">Transient Regularization</h2>
 
-    <p>
-      Some text about how the transient regularization loss works
+    <p><b>Issue:</b> Due to the dataset images being captured over a span of time (Multi-Date), each image contains a varying set of moving, transient objects such as vehicles. 
+      Neural Radiance Fields reconstruct the pixel colors assuming an inherent multi-view consistency.
+      This can cause local inconsistencies and artefacts in the learned color representation as the network tries to average between all given input images.
     </p>
 
+    <p class="mt-1">
+      The same parking lot across a series of training images including their capture date:
+    </p>
+    <div class="columns is-centered is-mobile is-multiline mt-1">
+      <div class="column is-half-mobile has-text-centered">
+          <img src="./static/images/dataset_transients/JAX_214_005_RGB.jpg" alt="">
+          <h5 class="subtitle is-6 mt-2">June 2018</h5>
+      </div>
+      <div class="column is-half-mobile has-text-centered">
+        <img src="./static/images/dataset_transients/JAX_214_008_RGB.jpg" alt="">
+        <h5 class="subtitle is-6 mt-2">June 2018</h5>
+      </div>
+      <div class="column is-half-mobile has-text-centered">
+        <img src="./static/images/dataset_transients/JAX_214_012_RGB.jpg" alt="">
+        <h5 class="subtitle is-6 mt-2">June 2018</h5>
+      </div>
+      <div class="column is-half-mobile has-text-centered">
+        <img src="./static/images/dataset_transients/JAX_214_015_RGB.jpg" alt="">
+        <h5 class="subtitle is-6 mt-2">June 2018</h5>
+      </div>
+      <div class="column is-half-mobile has-text-centered">
+        <img src="./static/images/dataset_transients/JAX_214_016_RGB.jpg" alt="">
+        <h5 class="subtitle is-6 mt-2">June 2018</h5>
+      </div>
+    </div>
+
     <p>
-      \(L_{t}(\mathcal{R}^t) = \sum_{r \in \mathcal{R}^t} || 1.0 - \beta(r)  ||^2_2 
-      \label{eq:car_reg_loss}\)
+      <b>Goal:</b> Reduce artefacts caused by moving, transient objects such as vehicles.
+    </p>
+
+    <p class="mt-5">
+      Analog to <a href="https://nerf-w.github.io/">Nerf-in-the-Wild</a> we propose the use of a learned uncertainty \( \beta(\mathbf{x}, \mathbf{t}_j) \). \(\mathbf{x}\) hereby refers to a 3-dimensional position in the scene 
+      and \(\mathbf{t}_j\) is a learned embedding for each training image \(j\). 
+      The color loss \(L_{color}\) is modified to include the uncertainty, allowing the network to reduce the impact of pixels belonging to transient objects by increasing the uncertainty \(\beta \).
+    </p>
+
+    <p class="mt-3">
+      \( \large L_{color}(\mathcal{R}) = \sum_{\mathbf{r} \in \mathcal{R}} \frac{|| \mathbf{c}(\mathbf{r}) - \mathbf{c}_{GT}(\mathbf{r}) ||^2_2}{2\beta'(\mathbf{r})^2} + \left( \frac{\log{\beta'(\mathbf{r}) + \eta}}{2} \right) \)
+    </p>
+
+    <p class="mt-5">
+      <b>Our Contribution:</b> We propose a transient regularization loss \( L_t \), using existing semantic data to increase uncertainty \(\beta \) for known transient locations based on existing ground truth semantic data.
+    </p>
+
+    <p class="mt-3">
+      \( \large L_{t}(\mathcal{R}^t) = \sum_{r \in \mathcal{R}^t} || 1.0 - \beta(r)  ||^2_2 
+      \text{ with } 
+      \mathcal{R}_t = \{\ \mathbf{r} \in \mathcal{R} | semantic_{gt}(\mathbf{r}) = vehicle \} \)
+    </p>
+
+    <p class="mt-5">
+      <b>Results:</b> We show a strong decrease in artefacts, mainly in parking lots and on top of parking garages.
     </p>
 
     <div class="columns is-vcentered mt-3">
@@ -391,12 +451,7 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{park2021nerfies,
-  author    = {Park, Keunhong and Sinha, Utkarsh and Barron, Jonathan T. and Bouaziz, Sofien and Goldman, Dan B and Seitz, Steven M. and Martin-Brualla, Ricardo},
-  title     = {Nerfies: Deformable Neural Radiance Fields},
-  journal   = {ICCV},
-  year      = {2021},
-}</code></pre>
+    <pre><code>BibTeX Code Missing</code></pre>
   </div>
 </section>
 
