--- a/index.html
+++ b/index.html
@@ -448,12 +448,12 @@
 </section>
 
 
-<section class="section" id="BibTeX">
+<!-- <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>BibTeX Code Missing</code></pre>
+    <pre><code>Citation information </code></pre>
   </div>
-</section>
+</section> -->
 
 
 <footer class="footer">
