--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://arxiv.org/pdf/2011.12948"
+                <a href="./static/WACV25_SemanticNeRFForSatelliteData.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -125,7 +125,7 @@
                   <span>Paper</span>
                 </a>
               </span>
-              <span class="link-block">
+              <!-- <span class="link-block">
                 <a href="https://arxiv.org/abs/2011.12948"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -133,10 +133,10 @@
                   </span>
                   <span>arXiv</span>
                 </a>
-              </span>
+              </span> -->
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://github.com/google/nerfies"
+                <a href="https://github.com/wagnva/semantic-nerf-for-satellite-data"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
@@ -146,7 +146,7 @@
               </span>
               <!-- Dataset Link. -->
               <span class="link-block">
-                <a href="https://github.com/google/nerfies/releases/tag/0.1"
+                <a href="https://github.com/wagnva/semantic-nerf-for-satellite-data"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="far fa-images"></i>
@@ -602,7 +602,7 @@
     <!-- Dataset Link. -->
     <div class="mt-3">
       <span class="link-block">
-        <a href="https://github.com/google/nerfies/releases/tag/0.1"
+        <a href="https://github.com/wagnva/semantic-nerf-for-satellite-data"
             class="external-link button is-normal is-rounded is-dark">
           <span class="icon">
               <i class="far fa-images"></i>
