update bibtex entry

--- a/index.html
+++ b/index.html
@@ -98,7 +98,12 @@
       <div class="columns is-centered">
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title">Semantic Neural Radiance Fields for <br>Multi-Date Satellite Data</h1>
-          <div class="is-size-5 publication-authors">
+
+          <div class="is-size-5">
+            <span>2nd Workshop on Computer Vision for Earth Observation Applications @ WACV 2025</span>
+          </div>
+
+          <div class="is-size-5 publication-authors mt-5">
             <span class="author-block">
               Valentin Wagner,</span>
             <span class="author-block">
@@ -113,11 +118,12 @@
             <span class="author-block">Fraunhofer Institute of Optronics, System Technologies and Image Exploitation</span>
           </div>
 
-          <div class="column has-text-centered">
+
+          <div class="column has-text-centered mt-3">
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="./static/WACV25_SemanticNeRFForSatelliteData.pdf"
+                <a href="https://openaccess.thecvf.com/content/WACV2025W/CV4EO/papers/Wagner_Semantic_Neural_Radiance_Fields_for_Multi-Date_Satellite_Data_WACVW_2025_paper.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -125,15 +131,15 @@
                   <span>Paper</span>
                 </a>
               </span>
-              <!-- <span class="link-block">
-                <a href="https://arxiv.org/abs/2011.12948"
+              <span class="link-block">
+                <a href="https://arxiv.org/abs/2502.16992"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
                   </span>
                   <span>arXiv</span>
                 </a>
-              </span> -->
+              </span>
               <!-- Code Link. -->
               <span class="link-block">
                 <a href="https://github.com/wagnva/semantic-nerf-for-satellite-data"
@@ -642,12 +648,19 @@
 </section>
 
 
-<!-- <section class="section" id="BibTeX">
+<section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>Citation information </code></pre>
+    <pre><code>@InProceedings{Wagner_2025_WACV,
+    author    = {Wagner, Valentin and Bullinger, Sebastian and Bodensteiner, Christoph and Arens, Michael},
+    title     = {Semantic Neural Radiance Fields for Multi-Date Satellite Data},
+    booktitle = {Proceedings of the Winter Conference on Applications of Computer Vision (WACV) Workshops},
+    month     = {February},
+    year      = {2025},
+    pages     = {1238-1246}
+}</code></pre>
   </div>
-</section> -->
+</section>
 
 
 <footer class="footer">
